syntax = "proto3";

package meteringpoint.v1;

service Meteringpoint {
  rpc GetOwnedMeteringPoints (OwnedMeteringPointsRequest) returns (MeteringPointsResponse);
}

message OwnedMeteringPointsRequest {
  string subject = 1;
  string actor = 2;
}

message MeteringPointsResponse {
  repeated MeteringPoint metering_points = 1;
}

message MeteringPoint {
  string metering_point_id = 1;
  string street_name = 2;
  string building_number = 3;
  string floor_id = 4;
  string room_id = 5;
  string postcode = 6;
  string city_name = 7;
  string web_access_code = 8;
  string type_of_mp = 9;
  string subtype_of_mp = 10;
  string asset_type = 11;
  string data_access_cvr = 12;
  string capacity = 13;
  string consumer_start_date = 15;
  string metering_point_alias = 16;
}
